--- a/Todo/Views/TodoItem/Edit.cshtml
+++ b/Todo/Views/TodoItem/Edit.cshtml
@@ -28,6 +28,12 @@
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
+            
+            <div class="form-group">
+                <label asp-for="Rank"></label>
+                <input asp-for="Rank" type="number" class="form-control" min="0" max="10" />
+                <span asp-validation-for="Rank" class="text-danger"></span>
+            </div>
 
 
             <div class="form-group">
