--- a/Todo/Views/TodoList/Detail.cshtml
+++ b/Todo/Views/TodoList/Detail.cshtml
@@ -70,7 +70,7 @@
 
                 <div class="col-md-4 text-right">
                     <small>
-                        @item.ResponsibleParty.UserName
+                        <strong style="font-weight: bold">@await Gravatar.GetUsername(@item.ResponsibleParty.UserName)</strong>
 
                         <img src="https://www.gravatar.com/avatar/@Gravatar.GetHash(item.ResponsibleParty.Email)?s=30"/>
 
